Fix cart alignment issues on small viewports

--- a/styles/cart.scss
+++ b/styles/cart.scss
@@ -22,6 +22,15 @@
   border-radius: 5px;
 }
 
+.item-container > div:first-child > div:nth-child(2) {
+  word-break: break-word;
+}
+
+.item-container > div:last-child > div:last-child {
+  width: 4.4em;
+  text-align: right;
+}
+
 #totals-container {
   width: 100%;
 }
